<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_all_activities"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/menu_all_activities" />
        <item
            android:id="@+id/nav_todo_list"
            android:icon="@drawable/baseline_checklist_rtl_24"
            android:title="@string/menu_todo_list" />
        <item
            android:id="@+id/nav_edumap"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/edu_map" />
    </group>
    <item android:title="Productivity"
        android:id="@+id/nav_tools">
        <menu>
            <item
                android:id="@+id/nav_voice_notes"
                android:icon="@drawable/baseline_mic_24"
                android:title="@string/voice_notes"/>
            <item
                android:id="@+id/nav_note_capture"
                android:icon="@drawable/baseline_camera_alt_24"
                android:title="@string/note_capture"/>
        </menu>
    </item>

    <item android:title="Other"
        android:id="@+id/nav_other">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="My profile"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Log out"/>
        </menu>
    </item>

</menu>