<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.webeedesign.learnup.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.webeedesign.learnup.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_todo_list"
        android:name="com.webeedesign.learnup.ui.todo_list.ToDoListFragment"
        android:label="@string/menu_todo_list"
        tools:layout="@layout/fragment_to_do_list" />
    <fragment
        android:id="@+id/nav_all_activities"
        android:name="com.webeedesign.learnup.ui.all_activities.AllActivitiesFragment"
        android:label="@string/menu_all_activities"
        tools:layout="@layout/fragment_all_activities" />
    <fragment
        android:id="@+id/nav_edumap"
        android:name="com.webeedesign.learnup.ui.edu_map.EduMapFragment"
        android:label="@string/edu_map"
        tools:layout="@layout/fragment_edu_map" />
    <fragment
        android:id="@+id/nav_note_capture"
        android:name="com.webeedesign.learnup.ui.note_capture.NoteCaptureFragment"
        android:label="@string/note_capture"
        tools:layout="@layout/fragment_note_capture" />
    <fragment
        android:id="@+id/nav_voice_notes"
        android:name="com.webeedesign.learnup.ui.voice_notes.VoiceNotesFragment"
        android:label="@string/voice_notes"
        tools:layout="@layout/fragment_voice_notes" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.webeedesign.learnup.ui.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />

</navigation>